# WebScraper4

./: README.md  pyproject.toml
site_discovery/: __init__.py  cli.py  detectors.py  fetcher.py  scanner.py  simple_scraper.py
tests/: test_detectors.py  test_scanner.py  test_simple_scraper.py
